# hdtrace-piosim

./: build-common.xml  dependencies.xml
HDJumpshot/: .classpath  .project  COPYRIGHT  build.xml  jumpshot-color.property  test.xml
HDMPIwrapper/: .cproject  .project  Makefile  Makefile.am  Makefile.in  configure.ac  dummy-likwid-interface.c  dummy-sotrace-interface.c  dummy-wrapper-interface.c  generate-wrapper.sh  interesting_funcs.h  interesting_funcs2.h  likwid_development_snapshot_03_08_10.patch  wscript
HDMPIwrapper/dll-wrapper/: compile.sh  create-func-wrapper.py  sotracer.c  sotracer.h  test.c  trace.c  wrapper_conf.py
HDMPIwrapper/dll-wrapper/CFunctionListExtractor/: Makefile  c-character-classifier.c  c-character-classifier.h  c-function-declaration-detector.c  c-function-declaration-detector.h  main.c
HDMPIwrapper/dll-wrapper/functionLists/: cdi  hdf5  netcdf  posixIO
HDMPIwrapper/doc/: mpiwrapper.tex
HDMPIwrapper/doc/img/: building.dia  dataflow-praes.dia
HDMPIwrapper/include/: hdMPITracer.h  hdMPITracer.h.in  interesting_funcs.h  wscript
HDMPIwrapper/lib/: Makefile.am
HDMPIwrapper/likwid/snapshot_03_08_10/: .gitignore  .hg_archival.txt  .hgtags  Makefile  config.mk  include_GCC.mk  include_ICC.mk
HDMPIwrapper/likwid/snapshot_03_08_10/doc/: likwid-pin.1
HDMPIwrapper/likwid/snapshot_03_08_10/groups/atom/: FLOPS_DP.txt  MEM.txt
HDMPIwrapper/likwid/snapshot_03_08_10/groups/nehalem/: L3.txt  MEM.txt
HDMPIwrapper/likwid/snapshot_03_08_10/groups/westmere/: JK.txt
HDMPIwrapper/likwid/snapshot_03_08_10/perl/templates/: group.tt
HDMPIwrapper/likwid/snapshot_03_08_10/src/: affinity.c  cpuid.c  numa.c  perfmon.c  strUtil.c
HDMPIwrapper/likwid/snapshot_03_08_10/src/applications/: likwid-bench.c  likwid-perfCtr.c  likwid-pin.c  likwid-topology.c
HDMPIwrapper/likwid/snapshot_03_08_10/src/hdtrace/: hdtraceLikwid.c  hdtraceTest-2.c  hdtraceTest.c
HDMPIwrapper/likwid/snapshot_03_08_10/src/includes/: affinity.h  hdtraceLikwid.h  numa_types.h  perfmon.h  perfmon_core2.h  perfmon_k10.h  perfmon_nehalem.h
HDMPIwrapper/scripts/: create-bridge.sh  create_fortran_bridge.py  create_sim-wrapper.py  project-description-merger.py  wrapper_conf.py
HDMPIwrapper/src/: HDTraceMPIWrapper.src.c  common.c  common.h  hash_tables.c  hash_tables.h  hdMPITracer.c  hdTraceMPIWrapper.src.c  mpi_names.c  mpi_names.h  test_nested.c  write_info.c  write_info.h  wscript
HDMPIwrapper/test/: Makefile  Makefile.in
HDMPIwrapper/test/HDTests/: Makefile  comm.c  file.c  types.c
HDPowerEstimation/: .classpath  .gitignore  .project  build.xml  dict
HDStatsDaemon/: common.am  configure.ac
HDStatsDaemon/src/: hdStatsDaemon.c
HDStatsDeamon/: Makefile.am
HDTraceConverter/: .project  visualize-normal-trace.sh
HDTraceFormat/: .classpath  .project  build.xml
HDTraceWritingCLibrary/: .cdtconfigure.Debug (GNU)  .cdtconfigure.Optimize (GNU)  .cproject  .project  Doxyfile  Doxyfile.api_only  Makefile  Makefile.am  Makefile.in  aclocal.m4  common.am  configure  configure.ac  wscript
HDTraceWritingCLibrary/include/: config.h.in  hdError.h  hdRelation.h  hdStats.h  hdTopo.h  hdTrace.h
HDTraceWritingCLibrary/lib/: Makefile.am  Makefile.in
HDTraceWritingCLibrary/src/: 00doxygen.h  Makefile  Makefile.am  Makefile.in  Makefile.sk  common.c  common.h  config.h  hdRelation.c  hdStats.c  hdStatsInternal.h  hdTopo.c  hdTopoInternal.h  hdTrace.c  hdTraceInternal.h  hostInformation.c  hostInformation.h  pkgconfig.h.in  util.c  util.h  wscript
HDTraceWritingCLibrary/src/.deps/: common.P  hdStats.P  hdTopo.P  hdTrace.P  util.P
HDTraceWritingCLibrary/tests/: Makefile  Makefile.am  Makefile.in  Makefile.sk  hdRelationTest.c  hdStatsTest.c  hdTopoTest.c  hdTraceTest.c  tests.h  wscript
HDTraceWritingCLibrary/tools/: Makefile  Makefile.am  Makefile.in  hdStatsPrint.c  hdStatsReadHeader.pl  wscript
PIOsimHD-Doc/: .project
PIOsimHD-Maint/: .project  EvaluationIdeas.txt  path.rc
PIOsimHD-Model/: .classpath  .project  TODO.txt
PIOsimHD-Simulator/: .classpath  .project  Changelog  CommandToSimulationMapper.txt  EvaluationIdeas.txt  ModelToSimulationMapper.txt  TODO.txt  TraceEntryNameToCommandMapping.txt  links.txt  out.xml.bz2  run-trace.trc.bz2  runtrace_nulluploadid215.xml  runtrace_nulluploadid223.xml  runtrace_nulluploadid227.xml  runtrace_nulluploadid231.xml  runtrace_pvsnode1id10_client0id12.xml  (+16 more)
PerformanceTracingLibrary/examples/: Makefile.am  Makefile.in  traceAll.c  traceLoop.c  traceLoop2.c
PerformanceTracingLibrary/tests/: Makefile.am  Makefile.in  ptlTest.c  tests.h
PowerTracer/: .cdtconfigure.Build (GNU)  .cproject  .project  Doxyfile  Doxyfile.api_only  Makefile.am  Makefile.in  common.am  configure  configure.ac  configure.scan  hosts.map  pt.cfg  wscript
PowerTracer/doc/: LMG_commands.txt
PowerTracer/examples/: Makefile.am  ptLoop.c  wscript
PowerTracer/include/: pt.h
PowerTracer/lib/: Makefile.am
PowerTracer/src/: LMG.c  LMG.h  Makefile.am  Makefile.in  common.h  conf.c  conf.h  error.h  pkgconfig.h.in  pt.c  pt.h  ptError.h  ptInternal.h  ptmain.c  serial.c  serial.h  topo.c  topo.h  trace.c  trace.h  tracing.c  tracing.h  wscript
ResourcesUtilizationTracingLibrary/: .cproject  .project  Doxyfile  Makefile.am  common.am  configure.ac  wscript
ResourcesUtilizationTracingLibrary/examples/: Makefile.am  MyProject.proj  traceAll.c  traceLoop.c  traceLoop2.c  traceLoopParallel.c  wscript
ResourcesUtilizationTracingLibrary/include/: PTL.h  RUT.h
ResourcesUtilizationTracingLibrary/lib/: Makefile.am
ResourcesUtilizationTracingLibrary/src/: RUT.c  common.h  config.h  devicestates.c  devicestates.h  internal_disk.c  internal_disk.h  processorstates.c  processorstates.h  tracing.c  tracing.h  wscript
ResourcesUtilizationTracingLibrary/tests/: Makefile.am  compile.sh  rutTest.c
branches/ResourcesUtilizationTracingLibrary/HDMPIwrapper/src/: Makefile.am  hdTraceMPIWrapper.src.c  mpi_names.c  test_nested.c
branches/ResourcesUtilizationTracingLibrary/PerformanceTracingLibrary/examples/: Makefile.am  traceAll.c  traceLoop.c  traceLoop2.c
(+2599 files in other folders)
